--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Multiplayer</title>
-        <script src="/socket.io/socket.io.js"></script>
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-        <h1 id="player-num">YOU ARE PLAYER 0!</h1>
-        <h2 id="word">Word: </h2>
-        <h2 id="definition">Definition: </h2>
-        <div class="centre">
-            <ul id="messages"></ul>
-            <textarea id="textbox" placeholder="Message..."></textarea>  
-            <div class="buttons">
-                <button id="send">Send</button>
-                <button id="new-word">New Word</button>
-            </div>
-            
-        </div>
-
-        <script src="app.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <title>Balderdash!</title>
+</head>
+<body>
+    <label for="nickname">Nickname: </label>
+    <input id="nickname" type="text" placeholder="nickname"> 
+    <button id="join">Join</button>
+    
+    <script src="joingame.js"></script>
+</body>
 </html>
