--- a/public/game.html
+++ b/public/game.html
@@ -6,15 +6,12 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <h1 id="player-num">YOU ARE PLAYER 0!</h1>
-        <h2 id="word">Word: </h2>
-        <h2 id="definition">Definition: </h2>
+        <h1>Balderdash</h1>
+        <h2 id="player-num">YOU ARE PLAYER 0!</h2>
         <div class="centre">
-            <ul id="messages"></ul>
-            <textarea id="textbox" placeholder="Message..."></textarea>  
+            <ul id="playerlist"></ul> 
             <div class="buttons">
-                <button id="send">Send</button>
-                <button id="new-word">New Word</button>
+                <button id="ready">Ready</button>
             </div>
             
         </div>
