started making countdown

--- a/public/game.html
+++ b/public/game.html
@@ -9,6 +9,8 @@
         <h1>Balderdash</h1>
         <h2 id="player-num">YOU ARE PLAYER 0!</h2>
         <div class="centre">
+            <h1 class="countdown" id="countdown"></h1>
+            <h3>Players:</h3>
             <ul id="playerlist"></ul> 
             <div class="buttons">
                 <button id="ready">Ready</button>
