--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <title>Balderdash!</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
     <input id="nickname" type="text" placeholder="nickname"> 
     <button id="join">Join</button>
     
-    <script src="joingame.js"></script>
+    <script src="scripts/joinlobby.js"></script>
 </body>
 </html>
