make game html and fix css

--- a/public/game.html
+++ b/public/game.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div class="centre">
+    <div id="centre" class="centre">
         <h1 id="title">LETS BEGIN</h1>
         <h2 id="word">Word: </h2>
         <textarea id="textbox" placeholder="Definition..."></textarea>
