added loading screen

--- a/public/game.html
+++ b/public/game.html
@@ -7,8 +7,21 @@
     <title>Balderdash</title>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/pageloader.css">
 </head>
 <body>
+    <div class="page-loader-component">
+        <div class="lds-roller">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <div id="centre" class="centre">
         <h1 id="title">LETS BEGIN</h1>
         <h2 id="word">Word: </h2>
