--- a/public/game.html
+++ b/public/game.html
@@ -31,6 +31,7 @@
         </div>
     </div>
     
+    <script src="scripts/gameconnection.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
