--- a/public/lobby.html
+++ b/public/lobby.html
@@ -3,6 +3,7 @@
     <head>
         <title>Multiplayer</title>
         <script src="/socket.io/socket.io.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
