--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/socket.io/socket.io.js"></script>
     <link href="styles/style.css" rel="stylesheet">
     <title>Balderdash!</title>
 </head>
 <body>
-    <label for="nickname">Nickname: </label>
-    <input id="nickname" type="text" placeholder="nickname"> 
-    <button id="join">Join</button>
+    <h1>Welcome To Balderdash!</h1>
+    <div class="nickname-field">
+            <label for="nickname">Nickname: </label>
+            <input id="nickname" type="text" placeholder="Bob"> 
+    </div>
+    <div class="centre">
+            <div class="item">
+                <h2>Join a friend!</h2>
+                <div class="centre">
+                    <div>
+                      <label for="code">Code: </label>
+                        <input type="text" placeholder="123456" id="code">  
+                    </div>
+                    <button id="join">Join</button>
+                </div>  
+            </div>
+            <div class="item">
+                <h2>Create a lobby!</h2>
+                <br>
+                <div class="centre">
+                    <button id="create">Create</button>   
+                </div>  
+            </div>
+        
+    </div>
     
     <script src="scripts/joinlobby.js"></script>
 </body>
